--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,233 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+  /* list-style: none; */
+  display: flex;
+  /* flex-wrap: nowrap; */
+  width: 100%;
+  /* border: 1px solid red; */
+  background-color: rgb(255, 161, 255);
+  font-family: "Lobster";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav > li {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1rem;
+  list-style: none;
+  width: 100vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-li {
+  margin: 1rem;
+}
+.nav-logo {
+  width: 120px;
+  height: auto;
+  margin-right: 30px;
+}
+title {
+  font-family: "Lobster";
+}
+.product-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 400px;
+  margin: auto;
+  border: 2px solid pink;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+  font-family: "roboto";
+}
+
+.product-container > p {
+  text-align: center;
+}
+.product-title {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: large;
+  font-weight: bold;
+}
+.product-price {
+  margin-top: 1rem;
+}
+.product-img {
+  width: 200px;
+  height: auto;
+  overflow: hidden;
+  margin: auto;
+  border-radius: 0.5rem;
+}
+
+.cart {
+  width: 130px;
+  text-align: end;
+  margin-right: 30px;
+}
+
+.add-to-cart {
+  background-color: pink;
+  width: 90px;
+  height: 40px;
+  border-radius: 0.5rem;
+  border: none;
+  margin: auto;
+  margin-top: 1rem;
+}
+
+.add-to-cart:hover {
+  cursor: pointer;
+  box-shadow: 5px 5px 2px 1px rgba(173, 151, 170, 0.856);
+}
+
+.display-none {
+  display: none;
+}
+/* index pg */
+.index-shop {
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  margin-top: 1rem;
+  background-color: rgb(252, 161, 255);
+  background: radial-gradient(
+    circle,
+    rgb(252, 161, 255) 0%,
+    rgb(255, 230, 255) 100%
+  );
+  padding-top: 5%;
+  color: white;
+  font-weight: bold;
+  font-family: "Roboto";
+}
+.index-shop:hover {
+  text-decoration: underline;
+  cursor: pointer;
+  color: rgb(104, 62, 105);
+}
+
+/* jewelry pg */
+.jewelry-img {
+  display: block;
+  width: 200px;
+  height: auto;
+  margin: auto;
+}
+/* form styling */
+
+form {
+  margin: auto;
+  box-sizing: border-box;
+  width: 200px;
+  padding: 20px;
+  font-family: "Roboto";
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  margin: 10px 0;
+  font-family: "Roboto";
+}
+
+input[type="text"]:focus {
+  background-color: rgb(255, 219, 236);
+  border-color: rgb(255, 219, 236);
+}
+input[type="text"]:hover,
+input[type="password"]:hover {
+  border: 2px solid rgb(255, 219, 236);
+}
+
+.submit-changes {
+  width: 120px;
+  height: 50px;
+  margin-top: 2rem;
+  background-color: rgb(243, 200, 214);
+  border: none;
+  border-radius: 0.5rem;
+}
+.submit-changes:hover {
+  background-color: rgb(238, 122, 161);
+  color: white;
+  cursor: pointer;
+}
+
+/* heart gif on index */
+.heart-gif {
+  display: block;
+  width: auto;
+  height: 300px;
+  margin: auto;
+}
+
+/* cart pg */
+.checkout-pay {
+  margin: 2rem;
+  width: 120px;
+  height: 50px;
+  border-radius: 0.5rem;
+  background-color: rgb(78, 218, 78);
+  border: none;
+}
+
+.checkout-pay:hover {
+  cursor: pointer;
+  background-color: rgb(45, 114, 45);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.remove {
+  border: none;
+  background-color: rgb(255, 206, 253);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remove:hover {
+  cursor: pointer;
+  padding: 1%;
+}
+
+.cart-item {
+  margin: auto;
+  width: 500px;
+  border: 1px solid gray;
+  padding: 1%;
+}
+
+/* footer */
+
+footer {
+  display: flex;
+  width: 100%;
+  background-color: rgb(255, 161, 255);
+  font-family: "Lobster";
+  margin-top: 1rem;
+}
+
+/* admin login */
+.login-div {
+  width: 300px;
+  margin: auto;
+  background-color: rgb(255, 161, 255);
+  padding: 2%;
+  border-radius: 0.5rem;
+}
+
+.login-button {
+  width: 100px;
+  height: 50px;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: white;
+  margin-top: 1rem;
+}
+
+.login-button:hover {
+  background-color: rgb(255, 206, 253);
+  border: 1px solid white;
+  color: white;
 }
