--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -95,6 +95,22 @@ title {
   background-color: rgba(255, 255, 255, 0.527);
 }
 /* cart */
+
+.cart-title{
+  width:100%;
+  margin: auto;
+  margin-bottom: 10px;
+  display: block;
+  text-align: center;
+}
+
+.cart-tile{
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+  width: 150px;
+  
+}
 .cart {
   width: 130px;
   text-align: end;
@@ -118,6 +134,12 @@ title {
   cursor: pointer;
   box-shadow: 5px 5px 2px 1px rgba(173, 151, 170, 0.856);
 }
+
+.cart-container{
+
+}
+
+
 
 .display-none {
   display: none;
@@ -260,7 +282,7 @@ input[type="password"]:hover {
 
 .checkout-pay:hover {
   cursor: pointer;
-  background-color: rgb(45, 114, 45);
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 
