--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,8 +56,11 @@ ul {
 
 title {
   font-family: "Lobster";
+  text-align: center;
+  display: block;
+  margin: auto;
+  width: 100%;
 }
-.products-div{}
 
 .product-container {
   display: flex;
@@ -122,7 +125,7 @@ title {
 
 .add-to-cart {
   background-color: pink;
-  width: 90px;
+  width: 120px;
   height: 40px;
   border-radius: 0.5rem;
   border: none;
@@ -132,19 +135,36 @@ title {
 
 .add-to-cart:hover {
   cursor: pointer;
+  color: white;
+  background-color: black;
   box-shadow: 5px 5px 2px 1px rgba(173, 151, 170, 0.856);
 }
 
-.cart-container{
-
+.coupon-code{
+  width: 500px;
+  margin: auto;
+  border:1px solid grey;
+  text-align: center;
 }
 
+.coupon-code > input{
+  display: block;
+  margin: 20px;
+}
 
 
 .display-none {
   display: none;
 }
 /* index Home pg */
+.black-banner{
+  width: 100vw;
+  height: 20px;
+  color: white;
+  background-color: black;
+  text-align: center;
+ 
+}
 .index-shop {
   width: 100%;
   height: 100px;
